Fixed align in the main page

--- a/less/style.less
+++ b/less/style.less
@@ -15,10 +15,6 @@
   max-width: 80%;
 }
 
-.text {
-  text-align: justify;
-}
-
 // IDs
 #component {
   padding-top: 50%;
