--- a/less/style_parent.less
+++ b/less/style_parent.less
@@ -42,6 +42,10 @@ a {
   color: @theme-primary;
 }
 
+.text {
+  text-align: justify;
+}
+
 // button style
 .btn {
   .sans-serif-font;
